--- a/css/carousel.css
+++ b/css/carousel.css
@@ -27,13 +27,19 @@ body {
   height: 32rem;
   background-color: #777;
 }
-.carousel-item > img {
+/* .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 32rem;
-}
+} */
+
+.carousel-inner img {
+      margin-left:250px;
+      width: 70%;
+      height: 100%;
+  }
 
 
 /* MARKETING CONTENT
